Parallax API changed

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="preload" href="/assets/icons/logo.webp" as="image" />
-    <link rel="preload" href="/assets/icons/logo_02.webp" as="image" />
-    <link rel="preload" href="/assets/icons/logo_white_02.webp" as="image" />
-
-    <link rel="icon" type="image/png" href="assets/icons/logo_red.webp" />
+    <link rel="icon" type="image/webp" href="assets/icons/logo_red.webp" />
     <meta
       name="description"
       content="Author: Breno Amarante, Github: breno-777"
